--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "gulp-util": "*",
-    "through": "*",
     "async": "*",
+    "gulp-util": "*",
+    "node-promise": "^0.5.12",
+    "through": "*",
     "underscore": "*"
   },
   "devDependencies": {
