--- a/package.json
+++ b/package.json
@@ -29,13 +29,11 @@
   "dependencies": {
     "async": "*",
     "gulp-util": "*",
-    "node-promise": "^0.5.12",
     "through": "*",
     "underscore": "*"
   },
   "devDependencies": {
     "gulp": "~3.4.0",
-    "gulp-concat": "~2.1.7",
-    "gulp-coffee": "~1.4.1"
+    "gulp-concat": "~2.1.7"
   }
 }
